<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0DA2B5"
        android:paddingVertical="10dp"
        android:paddingLeft="30dp"
        android:text="Main Menu"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/welcomeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/addJobWelcomeInfo"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/addJobWelcomeInfo2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:text="@string/addJobWelcomeInfo3"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linear2"
            app:layout_constraintTop_toBottomOf="@+id/welcomeInfo"
            app:layout_constraintVertical_bias="0.13999999"
            app:layout_constraintVertical_chainStyle="packed">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/add__job" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/addCurrentJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Current Job"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add current job details here" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linear3"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            app:layout_constraintVertical_bias="0.13999999"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="30dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/add__job" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/addNewJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Job Offer"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add job offer details here" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linear4"
            app:layout_constraintTop_toBottomOf="@+id/linear2"
            tools:layout_editor_absoluteX="30dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/compare_job" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/compare_jobs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Compare Jobs"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Compare your job offers here" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear3"
            app:layout_constraintVertical_bias="0.0">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/modifiy_job" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/modify_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Modify Comparison Settings"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change settings used to compare jobs" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_exitApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:text="EXIT APPLICATION"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/menuTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear4" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>